first version of requests but i also need to refactor state system